data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000153_7f89ab56-e764-4c1d-b69d-8872bdbedce5.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 7f89ab56-e764-4c1d-b69d-8872bdbedce5
- repo: scikit-learn/scikit-learn
- instance_id: scikit-learn__scikit-learn-10508
- base_commit: c753b77ac49e72ebc0fe5e3c2369fe628f975017
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
LabelEncoder transform fails for empty lists (for certain inputs)
Python 3.6.3, scikit_learn 0.19.1

Depending on which datatypes were used to fit the LabelEncoder, transforming empty lists works or not. Expected behavior would be that empty arrays are returned in both cases.

```python
>>> from sklearn.preprocessing import LabelEncoder
>>> le = LabelEncoder()
>>> le.fit([1,2])
LabelEncoder()
>>> le.transform([])
array([], dtype=int64)
>>> le.fit(["a","b"])
LabelEncoder()
>>> le.transform([])
Traceback (most recent call last):
  File "[...]\Python36\lib\site-packages\numpy\core\fromnumeric.py", line 57, in _wrapfunc
    return getattr(obj, method)(*args, **kwds)
TypeError: Cannot cast array data from dtype('float64') to dtype('<U32') according to the rule 'safe'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "[...]\Python36\lib\site-packages\sklearn\preprocessing\label.py", line 134, in transform
    return np.searchsorted(self.classes_, y)
  File "[...]\Python36\lib\site-packages\numpy\core\fromnumeric.py", line 1075, in searchsorted
    return _wrapfunc(a, 'searchsorted', v, side=side, sorter=sorter)
  File "[...]\Python36\lib\site-packages\numpy\core\fromnumeric.py", line 67, in _wrapfunc
    return _wrapit(obj, method, *args, **kwds)
  File "[...]\Python36\lib\site-packages\numpy\core\fromnumeric.py", line 47, in _wrapit
    result = getattr(asarray(obj), method)(*args, **kwds)
TypeError: Cannot cast array data from dtype('float64') to dtype('<U32') according to the rule 'safe'
```

FILES INSPECTED
---------------
- sklearn/preprocessing/label.py [Read: 1]
- sklearn/preprocessing/tests/test_label.py [Read: 1]

SEARCH ANCHORS
--------------
(none)

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find ./swebench_9_15/testbed -name "label.py" -path "*preprocessing*" | head -5
- [diagnostic] find testbed -name "label.py" -path "*preprocessing*" | head -5
- [test] python test_issue.py
- [test] python test_issue.py
- [other/reproduction] python verify_fix.py
- [diagnostic] find testbed -path "*/tests/*" -name "*label*" -type f | head -5
- [test] python test_fix_complete.py

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- ImportError: No module named _check_build

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Diagnostic Output after action #2]
  testbed/sklearn/preprocessing/label.py
- [Read Result after action #4]
       1→# Authors: Alexandre Gramfort <alexandre.gramfort@inria.fr>
       2→#          Mathieu Blondel <mathieu@mblondel.org>
       3→#          Olivier Grisel <olivier.grisel@ensta.org>
       4→#          Andreas Mueller <amueller@ais.uni-bonn.de>
       5→#          Joel Nothman <joel.nothman@gmail.com>
       6→#          Hamzeh Alsalhi <ha258@cornell.edu>
       7→# License: BSD 3 clause
       8→
       9→from collections import defaultdict
      10→import itertools
      11→import array
      12→
      13→import numpy as np
      14→import scipy.sparse as sp
      15→
      16→from ..base import BaseEstimator, TransformerMixin
      17→
      18→from ..utils.fixes import sparse_min_max
      19→from ..utils import column_or_1d
      20→from ..utils.validation import check_array
      21→from ..utils.validation import check_is_fitted
      22→from ..utils.validation import _num_samples
      23→from ..utils.multiclass import unique_labels
      24→from ..utils.multiclass import type_of_target
      25→
      26→from ..externals import six
      27→
      28→zip = six.moves.zip
      29→map = six.moves.map
      30→
      31→__all__ = [
      32→    'label_binarize',
      33→    'LabelBinarizer',
      34→    'LabelEncoder',
      35→    'Mu
  [... truncated ...]
- [Test Output after action #6]
  Exit code 1
    File "test_issue.py", line 12
      print(f"Transform([]) = {result}")
                                      ^
  SyntaxError: invalid syntax
- [Test Output after action #8]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 5, in <module>
      from sklearn.preprocessing import LabelEncoder
    File "./swebench_9_15/testbed/sklearn/__init__.py", line 133, in <module>
      from . import __check_build
    File "./swebench_9_15/testbed/sklearn/__check_build/__init__.py", line 46, in <module>
      raise_build_error(e)
    File "./swebench_9_15/testbed/sklearn/__check_build/__init__.py", line 41, in raise_build_error
      %s""" % (e, local_dir, ''.join(dir_content).strip(), msg))
  ImportError: No module named _check_build
  ___________________________________________________________________________
  Contents of ./swebench_9_15/testbed/sklearn/__check_build:
  __init__.py               setup.py                  __init__.pyc
  _check_build.pyx
  ___________________________________________________________________________
  It seems that scikit-learn has not been built correctly.

  If you have installed scikit-learn from source, please do not forget
  to build the package before using it: run `python setup.py install` or
  `make` in the source directory.

  If you have used an installer, please check that it is suited for your
  Python version, your operating system
  [... truncated ...]
- [Diagnostic Output after action #14]
  testbed/sklearn/semi_supervised/tests/test_label_propagation.py
  testbed/sklearn/datasets/tests/data/svmlight_multilabel.txt
  testbed/sklearn/preprocessing/tests/test_label.py
- [Read Result after action #16]
       1→import numpy as np
       2→
       3→from scipy.sparse import issparse
       4→from scipy.sparse import coo_matrix
       5→from scipy.sparse import csc_matrix
       6→from scipy.sparse import csr_matrix
       7→from scipy.sparse import dok_matrix
       8→from scipy.sparse import lil_matrix
       9→
      10→from sklearn.utils.multiclass import type_of_target
      11→
      12→from sklearn.utils.testing import assert_array_equal
      13→from sklearn.utils.testing import assert_equal
      14→from sklearn.utils.testing import assert_true
      15→from sklearn.utils.testing import assert_raises
      16→from sklearn.utils.testing import assert_raise_message
      17→from sklearn.utils.testing import ignore_warnings
      18→
      19→from sklearn.preprocessing.label import LabelBinarizer
      20→from sklearn.preprocessing.label import MultiLabelBinarizer
      21→from sklearn.preprocessing.label import LabelEncoder
      22→from sklearn.preprocessing.label import label_binarize
      23→
      24→from sklearn.preprocessing.label import _inverse_binarize_thresholding
      25→from sklearn.preprocessing.label import _inverse_binarize_multiclass
      26→
      27→from sklearn import datasets
      28→
      29→iris = dataset
  [... truncated ...]
- [Test Output after action #20]
  ============================================================
  Testing the fix for LabelEncoder empty list bug
  ============================================================

  Test 1: Verify return type
  ('Empty array with dtype=np.intp:', array([], dtype=int64))
  ('Dtype:', dtype('int64'))
  ('Shape:', (0,))
  ('Length:', 0)

  Test 2: Numeric classes - compare with searchsorted
  ('searchsorted with non-empty input:', array([0, 1]))
  ('Dtype:', dtype('int64'))
  ('Fix for empty input:', array([], dtype=int64))
  ('Dtype:', dtype('int64'))
  ('Dtypes match:', True)

  Test 3: String classes - the bug scenario
  ('Empty list converted to array:', array([], dtype=float64))
  ('Default dtype:', dtype('float64'))
  ('ERROR (this is the bug):', TypeError("Cannot cast array data from dtype('float64') to dtype('S32') according to the rule 'safe'",))
  ('With fix:', array([], dtype=int64))
  Success!

  Test 4: Verify consistency across different class types
  Numeric classes: empty dtype=int64, non-empty dtype=int64
    Shape consistency: (0,) (empty) vs (2,) (non-empty)
  String classes: empty dtype=int64, non-empty dtype=int64
    Shape consistency: (0,) (empty) vs (2,) (non-empty)
  Mixed dtype: empty dtype=int64, non-empty dtype
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- sklearn/preprocessing/label.py
  Tool: Edit action #10
  old_text_sha256: 99add7b9f3d975eae83739f9e059924b5003019485bf11e6c82e43de07a73d69
  new_text_sha256: d28fc6317b8c576a02e6f97a1203801b62c667319771a93c09871ef61b73fd72
- swebench_9_15/verify_fix.py
  Tool: Write action #11
  new_text_sha256: a9b741ba6fca8c151477809805ab099dcfcc09f31401edd82dcada7e24daa664
- sklearn/preprocessing/tests/test_label.py
  Tool: Edit action #18
  old_text_sha256: 2df24e0fe14fa1d6bc9383db0353bea6ae778a271253696242dbdaf60d0b0eb5
  new_text_sha256: ebb198e2597086b88948f522911887acd7f883869914c4ba8ac8be7e26965c7c
- swebench_9_15/test_fix_complete.py
  Tool: Write action #19
  new_text_sha256: a23f78c3edc24a067e03db608faa01a6da197b08f5ebf74c21bfcfa97115b0f1

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
